repository/repository-server/src/test/resources/models/invalid/InvalidLocation5.fbmodel
vortolang 1.0

namespace com.test.namespace
version 1.0.0
displayname "InvalidLocation5"
description "Functionblock for Location"

functionblock InvalidLocation5 {
	
	configuration {
	
	}
	
	status {
	  mandatory x as float "Tracks the x axis"
	  mandatory y as float "Tracks the y axis"
	  mandatory z as float "Tracks the z axis"	
	}

}
